feat(runtime-attach): complete remaining tasks — AppContext discovery, spikes, docs, Docker CI
Finishes the runtime-attach-and-webstart change (31/31 tasks).

Agent (5.1, proven needed by spike 0.5): ComponentInspector.allWindows() enumerates
every AppContext (AppContext.getAppContexts()), opening java.desktop/sun.awt+java.awt
via the agent's Instrumentation.redefineModule, with a safe fallback to
Window.getWindows(). Fixes multi-AppContext apps (Java Web Start / applets) losing
windows — verified: a 2-AppContext Swing app now yields both frames; single-context
unchanged (18 buttons; SWT + spy + SWT-robot 28/0 regression-clean).

Spikes (live): 0.4 jattach fallback loads the agent on a JRE-only host (validated);
0.3 IcedTea-Web ran heap-args JNLP in-process (forks only on JVM-version mismatch) —
discovery handles both topologies; 0.5 AppContext empty-tree reproduced then fixed;
0.1 (prior) all-permissions ITW still blocked; 0.2 OpenWebStart not retrievable
headless (shares the ITW core — real-install spike pending). Evidence scripts under
the change's evidence/.

Docs: libdoc regenerated (docs/keywords/*.html now list the new keywords);
docs/runtime-attach.md gains an "Injection vectors (deployment matrix)" section
(dynamic-attach default, OWS deployment.properties opt-in, JAVA_TOOL_OPTIONS rejected,
JDK-version behavior).

CI/Docker (7.4): tests/docker/jnlp/{Dockerfile,entrypoint.sh,README.md} (JDK17 +
portable IcedTea-Web + Xvfb, mirrors tests/docker/rcp) + a 'webstart-jnlp' CI job.
Built + ran the image locally: the JNLP robot suite passes headless (launch+discover+
clear SecurityManager block). 5.2/5.3 evaluated as not-needed for the validated scope
(attach-after-UI model; standard introspection uses toolkit APIs, not app classes).

Regression: python unit 636 pass, cargo 245, spy 11/11, SWT robot 28/0, Docker
harness green.

Co-Authored-By: claude-flow <ruv@ruv.net>